css/case.css
/* ... */
.slick-center
{
    transform: scale(1);
    box-shadow: 0 16px 60px 0 rgba(0,0,0,0.20);

    /* opacity: 1; */
}

.slick-prev:before,
.slick-next:before
{
    transition: .3s ease;

    opacity: 0;
    color: rgba(0, 0, 0, .5);
}

.slick-prev,
.slick-next
{
    position: absolute;
    top: 0;
    z-index: 100;
    outline: none;

    width: 50%;
    height: 95%;

    transform: none !important;
    opacity: 0;
}

.slick-next
{
    right: -50%;
}

.slick-prev
{
    left: -50%;
}

.bg-decor {
    position: absolute;
    width: 100%;
    min-width: 3640px;
    height: auto;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#desktop .bg-decor {
    top: 38%;
}

#mobile {
    min-height: 780px;
}

.img-mask {
    border-radius: 20px;
    overflow: hidden;
    box-shadow: 0 16px 60px 0 rgba(0,0,0,0.20);
}

.img-mask img {
    width: 100%;
    height: auto;
}

.infoblock-wrapper {
    height: 40px;
}

.infoblock {
    padding: 20px 30px;
    z-index: 100;
    position: relative;
}
.iphone-wrapper {
    position: relative;
    float: right;
    width: 370px;
    max-width: 100%;
}
.iphone {
    position: relative;
    width: 100%;
    padding: 100% 0;
    height: 0;
    transform: rotate(12deg);
    /* transition: 0.3s ease; */
}
.screen {
    position: absolute;
    background-color: #FFF;
}
.iphone .screen {
    top: 12.2%;
    left: 6.8%;
    right: 6.8%;
    bottom: 12.2%;
}
.iphone iframe, .imac iframe{
    position: absolute;
    overflow: hidden;
    width: 100%;
    height: 100%;
}
.iphone img, .imac img {
    pointer-events: none;
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
}
.imac-wrapper {
    position: relative;
    float: right;
    width: 100%;
}
.imac {
    position: relative;
    width: 100%;
    padding: 41% 0;
    height: 0;
}
.imac .screen {    
    top: 4.5%;
    left: 3.8%;
    right: 3.8%;
    bottom: 32.3%;
}

.imac iframe {
    width: 133.4%;
    height: 133.4%;
    transform: scale(0.75);
    transform-origin: 0 0;
}

.mobile-logo {
    position: absolute;
    left: 0;
    bottom: 0;
}

#result h2 {
    margin: 16px 0 16px 0;
}

/*small*/
@media screen and (max-width: 639px) {
    .small-no-padding {
        padding: 0 !important;
    }
    .small-text-center {
        text-align: center;
    }
    .small-rm {
        display: none;
    }
    .small-0 {
        width: 0!important;
        margin: 0!important;
        padding: 0!important;
    }
    .small-center {
        display: flex;

        text-align: center;

        align-items: center;
        justify-content: center;
    }

    a {
        text-decoration: underline;
    }

    a.button {
        text-decoration: none;
    }

    section {
      padding: 24px 0;
    }

    header h1 {
        font-size: 12vw;
    }

    .small-text-center {
        text-align: center;
    }
    .navigation {
        width: auto;
        justify-content: space-between;
        margin: 0;
    }
    .navigation > li {
        margin: 0;
    }
    .slide {
        padding: 0;
        display: flex;
        height: 100vh;
        align-items: center;
        min-height: 600px;
    }
    .form-wrapper {
        padding: 30px 40px;
    }

    .dark-bg {
        background: #000;
    }

    .select-wrapper {
        padding: 5px;
    }


    .info-logo {
        float: left;
        margin: 0 20px 0 0;
    }

    .infoblock-wrapper {
        height: auto;
        margin-bottom: 20px;
    }
    .iphone-wrapper {
        margin: 0 auto;
        float: none;
    }

    .iphone {
      transform: rotate(0deg);
      margin: 20px 0;
      float: none;
    }

    .iphone iframe {
        width: 133.4%;
        height: 133.4%;
        transform: scale(0.75);
        transform-origin: 0 0;
    }
    #result h2 {
        font-size: 10vw;
    }
    
}

/*medium*/
@media only screen and (min-width: 640px) and (max-width: 1023px) {
    .medium-text-center {
        text-align: center;
    }
    .medium-padding-right {
        padding: 0 10px 0 0;
    }
    .medium-padding-left {
        padding: 0 0 0 10px;
    }
    .medium-rm {
        display: none;
    }
    .medium-0 {
        width: 0!important;
        margin: 0!important;
        padding: 0!important;
    }
    /* section {
      padding: 24px 0;
    } */
    .navigation {
        width: auto;
        margin: 10px;
    }
    .slide {
        padding: 140px 0;
    }

    .hero-logo {
        right: -40px;
        left: auto;
    }
    .infoblock-wrapper {
        height: auto;
        margin-bottom: 20px;
    }

    #mobile .bg-decor {
        transform: translate(-50%, -38%) scale(0.7);
    }
}

/*large*/
@media only screen and (min-width: 1024px) {
    .large-rm {
        display: none;
    }
    .large-0 {
        width: 0!important;
        margin: 0!important;
        padding: 0!important;
    }
}

